--- a/style.css
+++ b/style.css
@@ -107,7 +107,11 @@ body {
 .btnSearch {
     color: rgba(255, 255, 255, 0.6);
     font-size: 1rem;
-    margin-left: 10rem;
+    position: absolute;
+    left: 14px;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0;
 }
 
 .search-container {
@@ -120,7 +124,7 @@ body {
     position: relative;
     display: flex;
     gap: 1rem;
-    margin-bottom: center;
+    margin-bottom: 1.5rem;
 }
 
 .search-box i {
